rendered/envs/alpha/vmks/ingressroute-vmui-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmui-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`vmui.ts.zebradil.dev`) || Host(`vmui.junior.ts.zebradil.dev`)
      middlewares:
        - name: vmui-alias-redirect
      services:
        - name: vmselect-vmks-long
          port: http
